fix the text are aligned to the left

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -15,7 +15,7 @@ h2 {
     font-weight: 700;
     line-height: 60px;
     letter-spacing: 0%;
-    text-align: left;
+    text-align: center;
 }
 
 h3 {
@@ -34,7 +34,7 @@ p {
     font-weight: 400;
     line-height: 23px;
     letter-spacing: 0%;
-    text-align: left;
+    text-align: center;
 }
 
 .fp{
